NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/NATT_Case_Sales_Order__c.object-meta.xml
<CustomObject>
    <description>Junction object that links cases with sales orders and part numbers</description>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CSO-{000000}</displayFormat>
        <label>Case Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>