NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NAC_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NAC_Line_Number__c</fullName>
    <label>Line</label>
    <length>4</length>
    <type>Text</type>
</CustomField>