NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NAC_Part_Not_tied_to_Order__c.field-meta.xml
<CustomField>
    <fullName>NAC_Part_Not_tied_to_Order__c</fullName>
    <label>Part # (Not tied to Order)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>