NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NAC_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NAC_Purchase_Order_Number__c</fullName>
    <label>PO #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>