NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Additional_Detail__c.field-meta.xml
<CustomField>
    <fullName>NATT_Additional_Detail__c</fullName>
    <inlineHelpText>This field is intended for additional comments.  Please Post overall Case comments on the Case record.</inlineHelpText>
    <label>Additional Detail</label>
    <type>TextArea</type>
</CustomField>