NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Case__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case__c</fullName>
    <description>Links the order product to the case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Order_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>