NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case_Type__c</fullName>
    <description>Displays the case type of the related order product</description>
    <formula>TEXT(NATT_Case__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>