NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Description__c</fullName>
    <description>Displays the description of the related order product</description>
    <formula>NATT_Order_Product__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>