NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Disputed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Disputed_Quantity__c</fullName>
    <label>Disputed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>