NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_JDE_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Order__c</fullName>
    <formula>IF(ISBLANK(NATT_Order__r.NATT_JDE_Sales_Order_Number__c),  NATT_JDE_SO__c, NATT_Order__r.NATT_JDE_Sales_Order_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Sales Order #</label>
    <type>Text</type>
</CustomField>