NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_JDE_SO__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_SO__c</fullName>
    <description>Manual input field for the Sales Order.  It is primarily used as a Solution when a Salesforce Order record is not available.</description>
    <inlineHelpText>Field used to capture a Sales Order Number when it is not available from a Salesforce Oder record.</inlineHelpText>
    <label>Carrier SO #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>