NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Line_Number__c</fullName>
    <formula>TEXT(NATT_Order_Product__r.LineNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Number</label>
    <type>Text</type>
</CustomField>