NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number__c</fullName>
    <label>Model Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>