NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Order Record</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Case_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>