NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The part number this case is against, filtered according to the order selected</description>
    <label>Salesforce Order Product Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.NATT_Order__c</field>
            <operation>equals</operation>
            <valueField>OrderItem.OrderId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>Case_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>