NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Packing_Slip_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Packing_Slip_Number__c</fullName>
    <label>Packing Slip Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>