NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Part__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part__c</fullName>
    <inlineHelpText>Field used to capture a Part Number when it is not available from a Salesforce Oder Product or from as Salesforce Product record.</inlineHelpText>
    <label>Part #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>