NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Description__c</fullName>
    <description>Free form text field to describe a part number that was not found</description>
    <inlineHelpText>Field used to capture a Part Number Description when it is not available from a Salesforce Oder Product or from as Salesforce Product record.</inlineHelpText>
    <label>Part # Description</label>
    <type>TextArea</type>
</CustomField>