NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Number__c</fullName>
    <description>Display the part number
1.  Checks for a product linked to the record
2.  Then checks for a free form part number on the record
3.  Then checks for a part number on an order product
4.  Then checks for a configured unit code on an order product</description>
    <formula>IF(!ISBLANK(NATT_Salesforce_Product_Link__r.Id),
   NATT_Salesforce_Product_Link__r.NATT_P_N__c,
   IF(!ISBLANK(NATT_Part__c),
      NATT_Part__c,
      IF(!ISBLANK(NATT_Order_Product__r.NATT_P_N__c),
         NATT_Order_Product__r.NATT_P_N__c,
         IF(!ISBLANK(NATT_Order_Product__r.SBQQ__RequiredBy__r.NATT_P_N__c),
            NATT_Order_Product__r.SBQQ__RequiredBy__r.NATT_P_N__c,
            NATT_Order_Product__r.Order.NATT_Configured_Unit_Code__c
         )
      )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>