NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Part_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Number_Description__c</fullName>
    <formula>IF(!ISBLANK(NATT_Salesforce_Product_Link__r.Id),
    NATT_Salesforce_Product_Link__r.Name ,
   IF(!ISBLANK(NATT_Part__c),
       NATT_Part_Description__c,
      IF(!ISBLANK(NATT_Order_Product__r.NATT_P_N__c),
          NATT_Order_Product__r.Product2.Name ,
         &quot;&quot;
      )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number Description</label>
    <type>Text</type>
</CustomField>