NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Photo_attached_to_Case__c.field-meta.xml
<CustomField>
    <fullName>NATT_Photo_attached_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo attached to Case</label>
    <type>Checkbox</type>
</CustomField>