NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Purchase_Order_Number__c</fullName>
    <formula>NATT_Order__r.NATT_Purchase_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Number</label>
    <type>Text</type>
</CustomField>