NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quantity__c</fullName>
    <description>displays the quantity of the related order product</description>
    <formula>NATT_Order_Product__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>