NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Salesforce_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>NATT_Salesforce_Product_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Product Link</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>