NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/NATT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Serial_Number__c</fullName>
    <description>serial number for the linked order part</description>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>