NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/fields/Photo_Names__c.field-meta.xml
<CustomField>
    <fullName>Photo_Names__c</fullName>
    <inlineHelpText>Names of photos initially attached to the Case for this Case - Order</inlineHelpText>
    <label>Photo Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>