NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/listViews/CTBR_All_Case_Line_Item.listView-meta.xml
<ListView>
    <fullName>CTBR_All_Case_Line_Item</fullName>
    <columns>NAME</columns>
    <columns>NATT_Case__c</columns>
    <columns>NATT_Case_Type__c</columns>
    <columns>NATT_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <sharedTo>
        <roleAndSubordinates>CTBR</roleAndSubordinates>
    </sharedTo>
</ListView>