NATTQA-ENV/force-app/main/default/objects/NATT_Case_Sales_Order__c/listViews/CTM_All_Case_Line_Item.listView-meta.xml
<ListView>
    <fullName>CTM_All_Case_Line_Item</fullName>
    <columns>NAME</columns>
    <columns>NATT_Case__c</columns>
    <columns>NATT_Case_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>CTM</roleAndSubordinates>
    </sharedTo>
</ListView>